--- a/MinToDo/Pages/Index.razor
+++ b/MinToDo/Pages/Index.razor
@@ -5,7 +5,7 @@
 <PageTitle>To Do List</PageTitle>
 
 <div class="border" style="padding: 20px;">
-	<h4>New Item</h4>
+	<h4>To Do List</h4>
 	<ToDoItemForm OnItemAdded="@ItemsChanged" />
 </div>
 
